processing-like thing; notes from class

--- a/docs/2019-01-15.md
+++ b/docs/2019-01-15.md
@@ -24,8 +24,8 @@ How might we implement PD using our building blocks from `synths.h`? We have thr
 
 Listing: Phase distortion synthesis
 ``` {#lst:pd .cpp}
-struct PD {
-  // ???
+struct PD : Phasor {
+
 };
 ```
 
