completed notes rom last time

--- a/docs/2019-01-15.md
+++ b/docs/2019-01-15.md
@@ -24,22 +24,55 @@ How might we implement PD using our building blocks from `synths.h`? We have thr
 
 Listing: Phase distortion synthesis
 ``` {#lst:pd .cpp}
-struct PD : Phasor {
+struct PhaseDistortion : Phasor, Array {
+  PhaseDistortion(unsigned size = 10000) {
+    const float pi2 = M_PI * 2;
+    resize(size);
+    for (unsigned i = 0; i < size; ++i) data[i] = sinf(i * pi2 / size);
+  }
 
+  Tri tri;
+  float modulationFactor = 0;
+
+  virtual float operator()() {
+    const float index = (phase + tri() * modulationFactor) * size;
+    const float v =
+        get(index);  // XXX raw crashes and i think it should not: investigate
+    Phasor::operator()();
+    return v;
+  }
+
+  virtual void frequency(float hertz) {
+    Phasor::frequency(hertz);
+    tri.frequency(hertz);
+  }
 };
 ```
 
 Listing: Windowed "sync" technique to simulate a resonant filter sweep
 ``` {#lst:sync .cpp}
-struct WindowSync {
-  // ???
+struct WindowedSync : Edge, Array {
+  WindowedSync(unsigned size = 10000) {
+    const float pi2 = M_PI * 2;
+    resize(size);
+    for (unsigned i = 0; i < size; ++i) data[i] = sinf(i * pi2 / size);
+  }
+
+  Phasor resonator;
+
+  virtual float operator()() {
+    const float index = resonator() * size;
+    const float v = get(index) * (1 - phase);
+    if (Edge::operator()()) resonator.phase = 0;
+    return v;
+  }
 };
 ```
 
 Listing: Alternate between waveforms per-cycle
 ``` {#lst:alt .cpp}
-struct Alt {
-  // ???
+struct AlternateWaveform {
+  // Left as an exercise for the student
 };
 ```
 
