updates to pages; fix forgotten .gitattributes

--- a/docs/2019-01-17.md
+++ b/docs/2019-01-17.md
@@ -1,13 +1,14 @@
 ---
-title: 2019-01-15 | Frequency Modulation
+title: 2019-01-17 | Frequency Modulation
 ---
 
-## [Casio CZ]
+## [Yamaha DX7]
 
-- Uses [Phase distortion synthesis]
-- [Tomás Mulcahy on The Casio CZ series]
-- [Michael Rickard on Casio CZ-1 Spelunking]
-- [Tom Wiltshire on Phase Distortion Synthesis]
+- Uses [FM] (frequency modulation)---[FM synthesis], specifically
+- [Yamaha DX7 owner's manual]
+-
+
+
 
 How might we implement PD using our building blocks from `synths.h`? We have three techniques to implement:
 
@@ -69,9 +70,15 @@ struct AlternateWaveform {
 };
 ```
 
-[Tomás Mulcahy on The Casio CZ series]: http://madtheory.com/site/the-casio-cz-series
-[Michael Rickard on Casio CZ-1 Spelunking]: http://www.kasploosh.com/projects/CZ/11800-spelunking
-[Tom Wiltshire on Phase Distortion Synthesis]: https://electricdruid.net/phase-distortion-synthesis
-[Phase distortion synthesis]: https://en.wikipedia.org/wiki/Phase_distortion_synthesis
-[Casio CZ]: https://en.wikipedia.org/wiki/Casio_CZ_synthesizers
-[Casio CZ-1 Demo]: https://www.youtube.com/watch?v=G1cuHFlyWHM
+[Yamaha DX7]: https://en.wikipedia.org/wiki/Yamaha_DX7
+[FM]: https://en.wikipedia.org/wiki/Frequency_modulation
+[FM synthesis]: https://en.wikipedia.org/wiki/Frequency_modulation_synthesis
+[Yamaha DX7 owner's manual]: https://usa.yamaha.com/files/download/other_assets/9/333979/DX7E1.pdf
+
+## Last time...
+
+- [2019-01-15](2019-01-15.html)[^blit]
+
+[^blit]: Just an aside.. this text on [BLIT integration] might help with the Stilson paper.
+
+[BLIT integration]: http://musicdsp.org/files/waveforms.txt
