updates to pages

--- a/docs/2019-01-17.md
+++ b/docs/2019-01-17.md
@@ -6,69 +6,9 @@ title: 2019-01-17 | Frequency Modulation
 
 - Uses [FM] (frequency modulation)---[FM synthesis], specifically
 - [Yamaha DX7 owner's manual]
--
 
+How might we implement DX7-style FM using our building blocks from `synths.h`?
 
-
-How might we implement PD using our building blocks from `synths.h`? We have three techniques to implement:
-
-1. "Distorting" phase lookup on a sine wavetable
-2. Simulating a resonant filter sweep using a windowed sync
-3. Mixing waveforms by alternation rather than addition
-
-Listing: Phase distortion synthesis
-``` {#lst:pd .cpp}
-struct PhaseDistortion : Phasor, Array {
-  PhaseDistortion(unsigned size = 10000) {
-    const float pi2 = M_PI * 2;
-    resize(size);
-    for (unsigned i = 0; i < size; ++i) data[i] = sinf(i * pi2 / size);
-  }
-
-  Tri tri;
-  float modulationFactor = 0;
-
-  virtual float operator()() {
-    const float index = (phase + tri() * modulationFactor) * size;
-    const float v =
-        get(index);  // XXX raw crashes and i think it should not: investigate
-    Phasor::operator()();
-    return v;
-  }
-
-  virtual void frequency(float hertz) {
-    Phasor::frequency(hertz);
-    tri.frequency(hertz);
-  }
-};
-```
-
-Listing: Windowed "sync" technique to simulate a resonant filter sweep
-``` {#lst:sync .cpp}
-struct WindowedSync : Edge, Array {
-  WindowedSync(unsigned size = 10000) {
-    const float pi2 = M_PI * 2;
-    resize(size);
-    for (unsigned i = 0; i < size; ++i) data[i] = sinf(i * pi2 / size);
-  }
-
-  Phasor resonator;
-
-  virtual float operator()() {
-    const float index = resonator() * size;
-    const float v = get(index) * (1 - phase);
-    if (Edge::operator()()) resonator.phase = 0;
-    return v;
-  }
-};
-```
-
-Listing: Alternate between waveforms per-cycle
-``` {#lst:alt .cpp}
-struct AlternateWaveform {
-  // Left as an exercise for the student
-};
-```
 
 [Yamaha DX7]: https://en.wikipedia.org/wiki/Yamaha_DX7
 [FM]: https://en.wikipedia.org/wiki/Frequency_modulation
