--- a/docs/2019-01-17.md
+++ b/docs/2019-01-17.md
@@ -4,16 +4,37 @@ title: 2019-01-17 | Frequency Modulation
 
 ## [Yamaha DX7]
 
+![DX7 algorithms](http://blog.dubspot.com/files/2012/12/DX-7-Algorithms.png){#fig:algorithms}
+
 - Uses [FM] (frequency modulation)---[FM synthesis], specifically
 - [Yamaha DX7 owner's manual]
 
-How might we implement DX7-style FM using our building blocks from `synths.h`?
+How might we implement DX7-style FM using our building blocks from `synths.h`? We need:
+
+- An `Operator` thingy that models DX7 operators, including [feedback]
+- A proper [ADSR] [envelop] to drive `Operator`
+- A way to compose `Operator` topologies as seen in @fig:algorithms
+- Some way to set patch settings
+
+``` {#lst:operator .cpp}
+struct Operator {
+  // ???
+};
+```
+
+``` {#lst:composition .cpp}
+  return a(b(c())) + d(e(_ = f(_))); // algorithm 3
+  return a() + b() + c() + d() + e() + (_ = f(_)); // 32
+```
 
 
 [Yamaha DX7]: https://en.wikipedia.org/wiki/Yamaha_DX7
 [FM]: https://en.wikipedia.org/wiki/Frequency_modulation
 [FM synthesis]: https://en.wikipedia.org/wiki/Frequency_modulation_synthesis
 [Yamaha DX7 owner's manual]: https://usa.yamaha.com/files/download/other_assets/9/333979/DX7E1.pdf
+[feedback]: https://en.wikipedia.org/wiki/Feedback
+[envelope]: https://en.wikipedia.org/wiki/Envelope_(waves)
+[ADSR]: https://en.wikipedia.org/wiki/Envelope_(music)
 
 ## Last time...
 
