--- a/docs/2019-01-17.md
+++ b/docs/2019-01-17.md
@@ -12,16 +12,20 @@ title: 2019-01-17 | Frequency Modulation
 How might we implement DX7-style FM using our building blocks from `synths.h`? We need:
 
 - An `Operator` thingy that models DX7 operators, including [feedback]
-- A proper [ADSR] [envelop] to drive `Operator`
+- A proper [ADSR] [envelope] to drive `Operator`
 - A way to compose `Operator` topologies as seen in @fig:algorithms
 - Some way to set patch settings
 
+Listing: A model of DX7 operators
 ``` {#lst:operator .cpp}
 struct Operator {
   // ???
 };
 ```
 
+...
+
+Listing: A way to compose DX7 algorithms
 ``` {#lst:composition .cpp}
   return a(b(c())) + d(e(_ = f(_))); // algorithm 3
   return a() + b() + c() + d() + e() + (_ = f(_)); // 32
