--- a/docs/2019-01-17.md
+++ b/docs/2019-01-17.md
@@ -25,6 +25,16 @@ struct Operator {
 
 ...
 
+Listing: Attack Decay Sustain Release
+``` {#lst:operator .cpp}
+struct ADSR {
+  void on() {???}
+  void off() {???}
+  float operator()() {???}
+};
+```
+...
+
 Listing: A way to compose DX7 algorithms
 ``` {#lst:composition .cpp}
   return a(b(c())) + d(e(_ = f(_))); // algorithm 3
