--- a/docs/2019-01-17.md
+++ b/docs/2019-01-17.md
@@ -18,8 +18,17 @@ How might we implement DX7-style FM using our building blocks from `synths.h`? W
 
 Listing: A model of DX7 operators
 ``` {#lst:operator .cpp}
-struct Operator {
-  // ???
+struct Operator : Sine {
+  float scaleFactor = 1;
+  ADSR envelope;
+  // frequencyRatio = 1;
+  float operator()(float modulation) {
+    frequency(frequency() + modulation);
+    return Sine::operator()() * envelope() * scaleFactor;
+  }
+  float operator()() {
+    return Sine::operator()() * envelope() * scaleFactor;
+  }
 };
 ```
 
@@ -37,8 +46,13 @@ struct ADSR {
 
 Listing: A way to compose DX7 algorithms
 ``` {#lst:composition .cpp}
-  return a(b(c())) + d(e(_ = f(_))); // algorithm 3
-  return a() + b() + c() + d() + e() + (_ = f(_)); // 32
+switch (algorithm) {
+  default:
+  case  3: return (a(b(c())) + d(e(_ = f(_)))) / 2;
+  case  4: return (a(b(c())) + (_ = d(e(f(_))))) / 2;
+  case 14: return (a(b()) + c(d(e() + (_ = f(_))))) / 2;
+  case 32: return (a() + b() + c() + d() + e() + (_ = f(_))) / 6;
+}
 ```
 
 
