--- a/docs/2019-01-17.md
+++ b/docs/2019-01-17.md
@@ -11,7 +11,7 @@ title: 2019-01-17 | Frequency Modulation
 
 How might we implement DX7-style FM using our building blocks from `synths.h`? We need:
 
-- An `Operator` thingy that models DX7 operators, including [feedback]
+- An `Operator` class that models DX7 operators, with [feedback]
 - A proper [ADSR] [envelope] to drive `Operator`
 - A way to compose `Operator` topologies as seen in @fig:algorithms
 - Some way to set patch settings
@@ -37,9 +37,43 @@ struct Operator : Sine {
 Listing: Attack Decay Sustain Release
 ``` {#lst:operator .cpp}
 struct ADSR {
-  void on() {???}
-  void off() {???}
-  float operator()() {???}
+  Line attack, decay, release;
+  int state = 0;
+
+  void set(float a, float d, float s, float r) {
+    attack.set(0, 1, a);
+    decay.set(1, s, d);
+    release.set(s, 0 ,r);
+  }
+
+  void on() {
+    state = 1;
+    attack.value = 0;
+    decay.value = 1;
+    release.value = decay.target;
+  }
+
+  void off() {
+    state = 3;
+  }
+
+  float operator()() {
+    switch (state) {
+      default:
+      case 0:
+        return 0;
+      case 1:
+        if (!attack.done())
+          return attack();
+        if (!decay.done())
+          return decay();
+        state = 2;
+      case 2: // sustaining...
+        return decay.target;
+      case 3:
+          return release();
+    }
+  }
 };
 ```
 ...
