--- a/docs/2019-01-17.md
+++ b/docs/2019-01-17.md
@@ -100,8 +100,4 @@ switch (algorithm) {
 
 ## Last time...
 
-- [2019-01-15](2019-01-15.html)[^blit]
-
-[^blit]: Just an aside.. this text on [BLIT integration] might help with the Stilson paper.
-
-[BLIT integration]: http://musicdsp.org/files/waveforms.txt
+- [2019-01-15](2019-01-15.html)
