--- a/docs/2019-01-24.md
+++ b/docs/2019-01-24.md
@@ -4,13 +4,21 @@ title: 2019-01-24 | Band-Limited
 
 - What is the spectrum of a sin oscillator with feedback modulation?
 - Quasi-Bandlimited w/ Frequency Modulation
-- Types of interpolation: linear, cubic (polynomial), and sinc ($sin(x)/x$)
-  + [Interpolation methods]
-- Sinc Interpolation: Construct a Band-Limited Impulse
-  + [Windowed Sinc Interpolation (DSPrelated)]
-  + [Windowed Sinc Interpolation (CCRMA)]
-  + [Sinc Interpolation for Signal Reconstruction]
-- BLIT, minBLEPS, polyBLEP
+- Bandlimited signal construction
+  + Bandlimited Impulse
+    * By construction (offline)
+    * frequency sweep
+  + Bandlimited Impulse Train (BLIT)
+  + Types of interpolation: [Interpolation methods]
+    * linear
+    * cubic (polynomial)
+    * sinc ($sin(x)/x$)
+  + Sinc Interpolation: Construct a Band-Limited Impulse
+    * [Windowed Sinc Interpolation (DSPrelated)]
+    * [Windowed Sinc Interpolation (CCRMA)]
+    * [Sinc Interpolation for Signal Reconstruction]
+  + Minimum-Phase Bandlimited Step (MinBLEP)
+  + PolyBLEP
 
 
 - [2019-01-22](2019-01-22.html)
