--- a/docs/2019-01-24.md
+++ b/docs/2019-01-24.md
@@ -2,6 +2,8 @@
 title: 2019-01-24 | Band-Limited
 ---
 
+Regex to [remove leading and trailing slashes](https://github.com/AlloSphere-Research-Group/allolib/blob/master/src/util/ui/al_Parameter.cpp#L157)
+
 - What is the spectrum of a sin oscillator with feedback modulation?
 - Quasi-Bandlimited w/ Frequency Modulation
   + See `Sine-With-Feedback.maxpat` (corrected)
