--- a/docs/2019-01-29.md
+++ b/docs/2019-01-29.md
@@ -2,6 +2,9 @@
 title: 2019-01-29 | Analysis / Resynthesis
 ---
 
+- Homework solutions...
+- Checkout [Physics-Based Sound Synthesis for Games and Interactive Systems]
+
 ## Analysis
 
 - break into "frames"
@@ -16,8 +19,33 @@ title: 2019-01-29 | Analysis / Resynthesis
 
 [^shape]: Imagine ways to approximate arbitrary functions... consider summing many [Gaussian] functions.
 
-[Gaussian]: https://en.wikipedia.org/wiki/Gaussian_function
+Listing: Analyse
+``` {#lst:analyse}
+int main(int argc, char* argv[]) {
+  // open sound file for analysis
+  // open output file
+  // load samples
+  // for each window of samples
+  //   calculate: mean/max magnitude
+  //   find maxima (frequency and magnitude)
+  //   sort maxima by magnitude
+  //   save top 10
+}
+```
 
+Listing: Synthesize
+``` {#lst:synthesize}
+int main(int argc, char* argv[]) {
+  // load analysis file
+  // set up sinusoid oscillators
+  // set up band-passed noise oscillators
+  // loop
+  //   given time parameter, generate interpolated frame
+  //   dispatch oscillators to support peaks and spectral shape
+  //   (maybe) advance time
+}
+```
+[Gaussian]: https://en.wikipedia.org/wiki/Gaussian_function
 
 [Physics-Based Sound Synthesis for Games and Interactive Systems]: https://www.kadenze.com/courses/physics-based-sound-synthesis-for-games-and-interactive-systems/info
 
