change to diy::Array (HUGE)

--- a/docs/2019-02-12.md
+++ b/docs/2019-02-12.md
@@ -2,6 +2,15 @@
 title: 2019-02-12 - Physical Modeling
 ---
 
++ make an appointment with me
++ fill out final presentation time/day poll
++ simplest filter
++ circular buffer
+  * moving average
++ analysis/resynthesis
++ mass-spring (mass == 1)
+
+
 
 
 ``` {#lst:filter .cpp}
